# Mezic

Mezic/: Cargo.toml
Mezic/src/Consensus/: Main.rs  bft.rs  mod.rs  pos.rs
Mezic/src/Consensus/Ledger/: merkle_tree.rs  mod.rs  state.rs  transactions.rs
Mezic/src/Consensus/Networking/: gossip_protocol.rs  libp2p.rs  mod.rs
Mezic/src/Consensus/Security/: cryptography.rs  mod.rs  zk_snarks.rs
Mezic/src/Consensus/Smart Contracts/: wasm_vm.rs
Mezic/src/Consensus/Storage/: rocksdb.rs
Mezic/src/Consensus/shards/: cross-shards.rs  mod.rs  shard-manager.rs
