[package]
name = "Mezic"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.51", features = ["mdns", "gossipsub", "tcp-tokio", "dns-tokio", "websocket"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocksdb = "0.17"
wasmtime = "7.0"